<?xml version="1.0"?>
<package>
  <name>carl_navigation</name>
  <version>0.0.0</version>
  <description>Autonomous Navigation Capabilities for CARL</description>
  
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="spkordell@wpi.edu">Steven Kordell</author>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_navigation</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/carl_navigation/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/carl_navigation</url>
 
  <buildtool_depend>catkin</buildtool_depend>
</package>
