<?xml version="1.0"?>
<package>
  <name>carl_navigation</name>
  <version>0.0.11</version>
  <description>Autonomous Navigation Capabilities for CARL</description>
  
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="davidkent@wpi.edu">David Kent</author>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_navigation</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/carl_navigation/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/carl_navigation</url>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>rail_ceiling</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>carl_description</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>rail_maps</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>robot_pose_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>rail_collada_models</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/config/costmap_plugins.xml" />
  </export>
</package>
